# moss-vs-code

./: AGENTS.md  README.md  package-lock.json  package.json
.github/workflows/: publish-n8n-nodes-moss.yml
apps/discord-bot/: README.md  bot.py  env.example  pyproject.toml
apps/moss-interview-coach/: README.md
apps/moss-interview-coach/backend/: .env.example  grader_worker.py  ingest_knowledge.py  requirements.txt  server.py  tracks.py
apps/moss-interview-coach/backend/knowledge/: agent_native_rubrics.json  ml_concepts_rubrics.json  system_design_rubrics.json
apps/moss-interview-coach/frontend/: package-lock.json  package.json
apps/moss-interview-coach/frontend/app/: globals.css  layout.tsx  page.tsx
apps/moss-vscode/: README.md  package-lock.json  package.json
apps/moss-vscode/media/: sidebar.css
apps/moss-vscode/promo/: package-lock.json  package.json
apps/moss-vscode/src/: extension.ts
apps/moss-vscode/src/indexer/: indexer.ts
apps/moss-vscode/src/moss/: client.ts  (+1 more)
apps/next-js/: package-lock.json  package.json
examples/cookbook/mastra/: package-lock.json  package.json
examples/javascript/: package.json
examples/javascript-web/: package.json
examples/moss-pikachu/promo/: package-lock.json  package.json
moss-live-labs/examples/travel-concierge/: README.md  agent.py
moss-live-labs/examples/voice-agent/: DEMO_SCRIPT_METADATA.md  README.md  agent.py
sdks/javascript/bindings/: package.json
sdks/javascript/sdk/: package.json
sdks/react-native/: README.md  app.plugin.js  package.json
sdks/react-native/ios/: MossReactNative.podspec
(+21 files in other folders)
